// Cream Trading System - Execution Schema
// Messages for Rust execution engine communication
//
// Schema Version: 1.0.0
// Last Updated: 2026-01-05
//
// NOTE: Using proto3 until Prost (Rust) supports Protobuf Editions.
// Migration to edition 2024 planned when tooling is ready.
// See SCHEMA_EVOLUTION.md for versioning guidelines.

syntax = "proto3";

package cream.v1;

import "cream/v1/common.proto";
import "cream/v1/decision.proto";
import "google/protobuf/timestamp.proto";

// ============================================
// Constraint Check
// ============================================

// Result of a constraint check
enum ConstraintResult {
  CONSTRAINT_RESULT_UNSPECIFIED = 0;
  CONSTRAINT_RESULT_PASS = 1;
  CONSTRAINT_RESULT_FAIL = 2;
  CONSTRAINT_RESULT_WARN = 3;
}

// Individual constraint check result
message ConstraintCheck {
  // Name of the constraint
  string name = 1;

  // Result of the check
  ConstraintResult result = 2;

  // Description of the constraint
  string description = 3;

  // Actual value that was checked
  optional double actual_value = 4;

  // Threshold that was applied
  optional double threshold = 5;
}

// Request to validate a decision plan against constraints
message CheckConstraintsRequest {
  // Decision plan to validate
  DecisionPlan decision_plan = 1;

  // Current account state
  AccountState account_state = 2;

  // Current positions
  repeated Position positions = 3;
}

// Response from constraint validation
message CheckConstraintsResponse {
  // Overall result
  bool approved = 1;

  // Individual constraint results
  repeated ConstraintCheck checks = 2;

  // Detailed violations (when not approved)
  repeated ConstraintViolation violations = 3;

  // Timestamp of validation
  google.protobuf.Timestamp validated_at = 4;

  // Rejection reason (if not approved)
  optional string rejection_reason = 5;
}

// Severity of constraint violation
enum ViolationSeverity {
  VIOLATION_SEVERITY_UNSPECIFIED = 0;
  VIOLATION_SEVERITY_INFO = 1;      // Informational, does not block
  VIOLATION_SEVERITY_WARNING = 2;   // Warning, may proceed with caution
  VIOLATION_SEVERITY_ERROR = 3;     // Error, blocks execution
  VIOLATION_SEVERITY_CRITICAL = 4;  // Critical, requires immediate attention
}

// Detailed constraint violation
message ConstraintViolation {
  // Violation code (e.g., "MAX_POSITION_SIZE", "INSUFFICIENT_MARGIN")
  string code = 1;

  // Severity level
  ViolationSeverity severity = 2;

  // Human-readable description
  string message = 3;

  // Instrument that violated (if applicable)
  optional string instrument_id = 4;

  // Field path that violated (e.g., "size.quantity")
  optional string field_path = 5;

  // Observed value that triggered violation
  optional double observed_value = 6;

  // Limit that was exceeded
  optional double limit_value = 7;

  // Constraint name that was violated
  string constraint_name = 8;
}

// ============================================
// Account State
// ============================================

// Current account state
message AccountState {
  // Account identifier
  string account_id = 1;

  // Total account equity
  double equity = 2;

  // Available cash for trading
  double buying_power = 3;

  // Current margin used
  double margin_used = 4;

  // Day trade count (for PDT rule)
  int32 day_trade_count = 5;

  // Whether pattern day trader rules apply
  bool is_pdt_restricted = 6;

  // Timestamp of state snapshot
  google.protobuf.Timestamp as_of = 7;
}

// ============================================
// Positions
// ============================================

// Current position
message Position {
  // Instrument
  Instrument instrument = 1;

  // Quantity held (signed: positive=long, negative=short)
  int32 quantity = 2;

  // Average entry price
  double avg_entry_price = 3;

  // Current market value
  double market_value = 4;

  // Unrealized P&L
  double unrealized_pnl = 5;

  // Unrealized P&L percentage
  double unrealized_pnl_pct = 6;

  // Cost basis
  double cost_basis = 7;
}

// ============================================
// Order Execution
// ============================================

// Order status
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_NEW = 1;           // Order created but not yet sent to broker
  ORDER_STATUS_PENDING = 2;       // Sent to broker, awaiting acknowledgment
  ORDER_STATUS_ACCEPTED = 3;      // Accepted by broker
  ORDER_STATUS_PARTIAL_FILL = 4;  // Partially filled
  ORDER_STATUS_FILLED = 5;        // Completely filled
  ORDER_STATUS_CANCELLED = 6;     // Cancelled by user or system
  ORDER_STATUS_REJECTED = 7;      // Rejected by broker
  ORDER_STATUS_EXPIRED = 8;       // Expired (e.g., DAY order at close)
}

// Order side
enum OrderSide {
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

// Request to submit an order
message SubmitOrderRequest {
  // Instrument to trade
  Instrument instrument = 1;

  // Buy or sell
  OrderSide side = 2;

  // Quantity
  int32 quantity = 3;

  // Order type
  OrderType order_type = 4;

  // Limit price (required for limit orders)
  optional double limit_price = 5;

  // Time in force
  TimeInForce time_in_force = 6;

  // Client order ID for tracking
  string client_order_id = 7;

  // Reference to decision cycle
  string cycle_id = 8;
}

// Response from order submission
message SubmitOrderResponse {
  // Broker-assigned order ID
  string order_id = 1;

  // Client order ID (echoed back)
  string client_order_id = 2;

  // Current order status
  OrderStatus status = 3;

  // Submission timestamp
  google.protobuf.Timestamp submitted_at = 4;

  // Error message if rejected
  optional string error_message = 5;
}

// Order execution acknowledgment
message ExecutionAck {
  // Decision cycle ID
  string cycle_id = 1;

  // Environment the execution ran in
  Environment environment = 2;

  // Timestamp of acknowledgment
  google.protobuf.Timestamp ack_time = 3;

  // Orders that were executed
  repeated OrderState orders = 4;

  // Errors encountered during execution
  repeated ExecutionError errors = 5;
}

// Complete order state for tracking
message OrderState {
  // Internal order ID
  string order_id = 1;

  // Broker-assigned order ID
  string broker_order_id = 2;

  // Client order ID
  string client_order_id = 3;

  // Whether this is a multi-leg order
  bool is_multi_leg = 4;

  // Leg states (for multi-leg orders)
  repeated OrderLegState legs = 5;

  // Current status
  OrderStatus status = 6;

  // Order side
  OrderSide side = 7;

  // Order type
  OrderType order_type = 8;

  // Instrument (for single-leg orders)
  Instrument instrument = 9;

  // Requested quantity
  int32 requested_quantity = 10;

  // Filled quantity
  int32 filled_quantity = 11;

  // Average fill price
  double avg_fill_price = 12;

  // Limit price (if applicable)
  optional double limit_price = 13;

  // Stop price (if applicable)
  optional double stop_price = 14;

  // Time in force
  TimeInForce time_in_force = 15;

  // Submission timestamp
  google.protobuf.Timestamp submitted_at = 16;

  // Last update timestamp
  google.protobuf.Timestamp last_update_at = 17;

  // Commission charged
  double commission = 18;

  // Reference to decision cycle
  string cycle_id = 19;

  // Status message from broker
  string status_message = 20;
}

// State of a single leg in a multi-leg order
message OrderLegState {
  // Leg identifier within the order
  string leg_id = 1;

  // Instrument for this leg
  Instrument instrument = 2;

  // Side for this leg (BUY or SELL)
  OrderSide side = 3;

  // Requested quantity for this leg
  int32 quantity = 4;

  // Order type for this leg
  OrderType order_type = 5;

  // Limit price for this leg (if applicable)
  optional double limit_price = 6;

  // Status of this leg
  OrderStatus status = 7;

  // Filled quantity for this leg
  int32 filled_quantity = 8;

  // Average fill price for this leg
  double avg_fill_price = 9;

  // Last update timestamp for this leg
  google.protobuf.Timestamp last_update_at = 10;
}

// Execution error
message ExecutionError {
  // Error code
  string code = 1;

  // Human-readable error message
  string message = 2;

  // Instrument that caused the error (if applicable)
  optional string instrument_id = 3;

  // Order ID that caused the error (if applicable)
  optional string order_id = 4;

  // Whether this error is retryable
  bool retryable = 5;

  // Suggested action
  string suggested_action = 6;
}

// ============================================
// gRPC Service
// ============================================

// Execution engine service
service ExecutionService {
  // Validate a decision plan against constraints
  rpc CheckConstraints(CheckConstraintsRequest) returns (CheckConstraintsResponse);

  // Submit an order for execution
  rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);

  // Get order state by order ID
  rpc GetOrderState(GetOrderStateRequest) returns (GetOrderStateResponse);

  // Cancel an order
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);

  // Stream order execution updates
  rpc StreamExecutions(StreamExecutionsRequest) returns (stream StreamExecutionsResponse);

  // Get current account state
  rpc GetAccountState(GetAccountStateRequest) returns (GetAccountStateResponse);

  // Get current positions
  rpc GetPositions(GetPositionsRequest) returns (GetPositionsResponse);
}

// Request to get order state
message GetOrderStateRequest {
  // Order ID to query (can be broker order ID or internal order ID)
  string order_id = 1;
}

// Response with order state
message GetOrderStateResponse {
  // Order ID
  string order_id = 1;

  // Broker order ID
  string broker_order_id = 2;

  // Instrument
  Instrument instrument = 3;

  // Current status
  OrderStatus status = 4;

  // Order side
  OrderSide side = 5;

  // Order type
  OrderType order_type = 6;

  // Requested quantity
  int32 requested_quantity = 7;

  // Filled quantity
  int32 filled_quantity = 8;

  // Average fill price
  double avg_fill_price = 9;

  // Limit price (if applicable)
  optional double limit_price = 10;

  // Stop price (if applicable)
  optional double stop_price = 11;

  // Submission timestamp
  google.protobuf.Timestamp submitted_at = 12;

  // Last update timestamp
  google.protobuf.Timestamp last_update_at = 13;

  // Status message from broker
  string status_message = 14;
}

// Request to cancel an order
message CancelOrderRequest {
  // Order ID to cancel (can be broker order ID or internal order ID)
  string order_id = 1;
}

// Response from cancel request
message CancelOrderResponse {
  // Whether cancel request was accepted
  bool accepted = 1;

  // Order ID that was canceled
  string order_id = 2;

  // Current order status after cancel request
  OrderStatus status = 3;

  // Error message if cancel was rejected
  optional string error_message = 4;
}

// Request to stream executions
message StreamExecutionsRequest {
  // Filter by cycle ID (optional)
  optional string cycle_id = 1;

  // Filter by order IDs (optional)
  repeated string order_ids = 2;
}

// Response with execution update (streamed)
message StreamExecutionsResponse {
  // Execution acknowledgment
  ExecutionAck execution = 1;
}

// Request for account state
message GetAccountStateRequest {
  // Account ID (uses default if not specified)
  optional string account_id = 1;
}

// Response with account state
message GetAccountStateResponse {
  // Current account state
  AccountState account_state = 1;
}

// Request for positions
message GetPositionsRequest {
  // Account ID (uses default if not specified)
  optional string account_id = 1;

  // Filter by symbols (optional)
  repeated string symbols = 2;
}

// Response with positions
message GetPositionsResponse {
  // Current positions
  repeated Position positions = 1;

  // Timestamp of snapshot
  google.protobuf.Timestamp as_of = 2;
}
